# jaipurrugs-whatsapp-backend

./: .checkov.yaml  .gitignore  .gitleaksignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  compose.yaml  create_gupshup_product_template.py  efs-storage-class.yaml  efs.yaml  example.env  kube-dep.yaml  load-balancer.yaml  pyproject.toml  requirements.txt  set_gupshup_webhook.py  sync.bat  vercel.json
.github/workflows/: deployment.yaml  lint.yaml  security.yaml  sync-products.yaml
api/: index.py
qlink_chatbot/: constants.py  main.py
qlink_chatbot/agent/: chat_agent.py  chat_context.py  chat_tools.py  schema.py  stock_agent.py  summariser_agent.py
qlink_chatbot/agent/utils/: chat_agent_prompts.py
qlink_chatbot/database/: mongo_base.py  mongo_system.py  mongo_utils.py  pinecone_utils.py
qlink_chatbot/renderers/: web_renderer.py  whatsapp_renderer.py
qlink_chatbot/routes/: dashboard_products.py  dashboard_routes.py  dashboard_stats.py  general_routes.py  whatsapp_formatter.py  whatsapp_routes.py  ws_routes.py
qlink_chatbot/services/: message_service.py
qlink_chatbot/utils/: agent_availability.py  cloudflare_client.py  env_load.py  geo_utils.py  jaipur_rugs_api.py  jr_api_client.py  logger_config.py  search_filters.py  search_middleware.py  search_mongo.py  store_locations.py
qlink_chatbot/utils/wa/: send_sarthak_img.py
qlink_chatbot/whatsapp_functions/: dispatch.py  send_text_message.py  send_typing_indicator.py
qlink_chatbot/whatsapp_functions/list/: send_service_list.py
qlink_chatbot/whatsapp_functions/media/: send_image.py  send_interactive_message.py  send_template_message.py
scripts/: test_product_filter_edges.py
