[project]
name = "qlink-chatbot"
version = "0.1.0"
description = "Jaipur Rugs WhatsApp chatbot backend"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "fastapi==0.118.2",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.3",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.37.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "openai",
    "pinecone",
    "pymongo==4.10.1",
    "httpx==0.27.0",
    "python-docx",
    "python-multipart",
    "boto3",
]

[tool.poetry]
name = "qlink-chatbot"
version = "0.1.0"
description = ""
authors = ["Jay shah <jayshah0726@gmail.com>"]
readme = "README.md"
packages = [
    { include = "qlink_chatbot", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "0.4.1"
pre-commit = "3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py310"
extend-exclude = [
    "__init__.py",
    "migrations",
]

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "E", # pycodestyle
    "I", # isort
    "D", # pydocstyle
]

ignore = [
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
